# modern-ml-pipeline

./: .coverage  .coveragerc  .env.example  .env.test.template  .gitignore  .mmp_legacy_check  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  CONSOLE_INTEGRATION_STRATEGY.md  CONSOLE_REFACTORING_PLAN.md  DEPLOYMENT_GUIDE.md  DEPRECATION.md  Dockerfile  LICENSE  PHASE3_CRITICAL_VERIFICATION.md  PHASE3_TEST_DEVELOPMENT_PLAN.md  PHASE5_REFACTORING_PLAN.md  PHASE6_DEEPLEARNING_IMPLEMENTATION_PLAN.md  PHASE_OUTPUT_STORAGE_PLAN.md  README.md  RECIPE_REFACTORING_PLAN.md  SYSTEM_ANALYSIS_REPORT.md  TASK_TYPE_ELIMINATION_PLAN.md  TEST_REFACTORING_MASTER_PLAN.md  TEST_STRATEGY.md  TIMESERIES_DEVELOPMENT_PLAN.md  __init__.py  blueprint.md  blueprint_verification_report.md  config.yaml  coverage.json  create_sample_data.sql  developer_guide.md  development_plan.md  docker-compose.yml  factoringlog.md  feature_store_contract.md  fix_console_references.py  (+24 more)
.claude/: CLI_REDEVELOPMENT_PLAN_INDEX.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md
.cursor/rules/: developmentrool.mdc
.github/workflows/: ci.yml  dev-stack-tests.yml  publish.yml  test.yml  tests.yml
.trash/0/: meta.yaml
.trash/647522906500310123/: meta.yaml
claudedocs/: CLI_Settings_통합_및_완전_재현성_구현_계획.md  CLI_명령어_최신화_및_콘솔_출력_일관화_계획.md  CLI_유틸리티_검증_및_수정계획.md  Console_메서드_통합_리팩토링_계획.md  Console_통합_리팩토링_상세계획.md  Model_computed_field_해결방안.md  Phase1_완료_보고서.md  Phase4_완료_보고서.md  adapter-refactoring-plan.md  api_serving_improvement_plan.md  architecture_analysis.md  calibration_implementation_plan.md  check_drift_implementation_plan.md  cli_workflow_analysis_report.md  comprehensive-test-execution-plan.md  comprehensive_test_failure_analysis.md  comprehensive_testing_strategy_and_architecture.md  console_logging_system_report.md  coverage_expansion_strategy.md  coverage_progress_report.md  dev_plan_template.md  end_to_end_pipeline_analysis_report.md  mlflow_ui_minimal_implementation_plan.md  phase-alpha-coverage-analysis.md  source_test_mismatch_analysis.md  test-excellence-roadmap.md  test-improvement-analysis.md  test-improvement-roadmap.md  test-stability-and-metrics-plan.md  test_failure_solution_strategies.md  tests_structure_refactoring_analysis.md  trainer_architecture_analysis.md  trainer_pipeline_refactor_completion_report.md  trainer_pipeline_test_strategy.md  종합_테스트_개선_계획.md  최종_CLI_Settings_통합_및_아키텍처_재설계_계획.md  최종_리팩토링_완료_보고서.md  테스트_개선_추가단계_Phase4-10.md  테스트_리팩토링_종합계획.md
config/: base.yaml  data_adapters.yaml  dev.yaml  local.yaml  prod.yaml
configs/: test.yaml
data/processed/: causal_test.csv  causal_test.parquet  classification_test.csv  (+4 more)
dev/: README.md
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  INFRASTRUCTURE_STACKS.md  MIGRATION_GUIDE.md  MMP_LOCAL_DEV_INTEGRATION.md  MODEL_CATALOG.md  PROJECT_FINAL_REPORT.md  README.md  TEAM_GUIDELINES.md  TESTING_GUIDE.md  USER_GUIDE.md  cli-reference.md  code-review-report.md  extending.md  getting-started.md  post-refactoring-review.md  serving-and-deploy.md  task-and-models.md
mmp/: __init__.py  __main__.py
my-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
plans/: code-2026-04-07.md
recipe/: causal_forest.yaml  xgboost_x_learner.yaml
recipes/: causal_forest.yaml  classification_randomforestclassifier_20250831_150641.yaml  classification_randomforestclassifier_20250831_150825.yaml  classification_randomforestclassifier_20250831_150839.yaml  classification_randomforestclassifier_20250831_150854.yaml  classification_randomforestclassifier_20250831_151921.yaml  classification_randomforestclassifier_20250831_152715.yaml  classification_randomforestclassifier_20250831_154447.yaml  classification_randomforestclassifier_20250831_173745.yaml  classification_randomforestclassifier_20250831_181740.yaml  classification_randomforestclassifier_20250831_181850.yaml  classification_recipe.yaml  dev_classification_randomforestclassifier_20250831_095849.yaml  dev_classification_randomforestclassifier_20250831_095926.yaml  dev_classification_randomforestclassifier_20250831_100224.yaml  dev_classification_randomforestclassifier_20250831_144401.yaml  dev_classification_randomforestclassifier_20250831_144429.yaml  dev_classification_randomforestclassifier_20250831_144453.yaml  dev_classification_randomforestclassifier_20250831_144517.yaml  dev_classification_randomforestclassifier_20250901_172817.yaml  dev_classification_randomforestclassifier_20250901_172837.yaml  dev_classification_randomforestclassifier_20250902_192617.yaml  dev_classification_test.yaml  e2e_classification_test.yaml  example_recipe.yaml  local_classification_test.yaml  test_recipe.yaml  xgboost_x_learner.yaml
reports/: coverage.e2e.xml  coverage.integration.xml  coverage.unit.xml  metrics.summary.json  metrics.verification.json  pytest.e2e.json  pytest.integration.json  pytest.unit.json
scripts/: README.md  aggregate_metrics.py  cleanup_legacy.sh  comprehensive_test_runner.py  generate_local_test_data.py  run_integration_tests.sh  run_test_analysis.sh  run_tests_split.py  scan_legacy_code.py  test-safe.sh  test_analysis.py  update_catalog_schema.py  verify_metrics.py  verify_test_coverage.sh
serving/: api.py  schemas.py
src/: __init__.py  __main__.py
src/cli/templates/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  evaluation_metrics.py  pyproject.toml
src/cli/templates/configs/: .gitkeep  __init__.py  base.yaml.j2  config.yaml.j2  dev.yaml.j2  local.yaml.j2  prod.yaml.j2
src/cli/templates/data/: .gitkeep
src/cli/templates/docker/: Dockerfile.j2  docker-compose.yml.j2
src/cli/templates/project/: .gitignore  README.md.j2  SETUP.md.j2  pyproject.toml.j2
src/cli/templates/recipes/: example.yaml  __init__.py  base_recipe.yaml.j2  recipe.yaml.j2
src/cli/templates/sql/: .gitkeep
test-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: README.md  conftest.py  pytest.ini  test-execution-guide.md  test_deprecation.py
(+1605 files in other folders)
