[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern-ml-pipeline"
version = "0.2.0"
description = "A modern, yaml-driven ML pipeline for multiple models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core dependencies - Essential for basic ML pipeline functionality
dependencies = [
    # CLI and Configuration
    "typer",
    "pydantic>=2.0.0",
    "pyyaml",
    "jinja2",
    "python-dotenv",
    # Data Processing
    "pandas",
    "scikit-learn",
    "pyarrow",
    # ML Experiment Tracking
    "mlflow",
    # API Serving
    "fastapi",
    "uvicorn[standard]",
    "httpx>=0.28.1",
    # Core utilities
    "setuptools>=68",
    "psycopg[binary]>=3.2.9",
    "redis>=6.2.0",
    "packaging>=24.2",
    "black>=25.1.0",
    "rich>=14.0.0",
    "rtdl-revisiting-models>=0.0.2",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.12.0",
    "mypy>=1.8.0",
    "ipykernel>=6.0.0",
    "import-linter>=2.3.0",
]

# Extended ML libraries for advanced use cases
ml-extras = [
    # Advanced ML Models
    "xgboost>=1.7.0",
    "catboost>=1.2.0",
    "lightgbm>=4.1.0",
    "torch>=2.0.0",
    
    # Model Interpretation
    "shap>=0.41.0",
    "optuna>=3.0.0",
    
    # Feature Engineering
    "category-encoders>=2.6.3",
    "rtdl_revisiting_models>=0.0.2",
    
    # Performance optimization 
    "numba>=0.58.1",
    "llvmlite>=0.41.1",
]

# Cloud and data storage backends
cloud-extras = [
    # Google Cloud
    "google-cloud-storage>=2.0.0",
    "google-cloud-bigquery[storage]>=3.12.0",
    "gcsfs>=2023.0.0",
    
    # AWS
    "s3fs>=2023.0.0",
    "boto3>=1.20.0",
    
    # Database backends
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    
    # Data formats
    "db-dtypes>=1.0.0",
    "sqlparse>=0.4.0",
    "fsspec>=2023.0.0",
]

# Feature Store integration
feature-store = [
    "feast>=0.35.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
]

# Complete installation with all extras
all = [
    "modern-ml-pipeline[ml-extras,cloud-extras,feature-store]",
]

[project.urls]
Homepage = "https://github.com/your-username/modern-ml-pipeline"
Issues = "https://github.com/your-username/modern-ml-pipeline/issues"

[project.scripts]
modern-ml-pipeline = "src.__main__:main"
ml-pipeline = "src.__main__:main"
mmp = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
exclude = [
  "/dev",
  "/mlruns", 
  "/logs",
  "/local",
  "/.claude",
  "*.log",
  "factoringlog.md",
  "main.py"
]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "Components must not import engine (upward dependency forbidden)"
type = "forbidden"
source_modules = [
  "src.components"
]
forbidden_modules = [
  "src.factory",
]

[[tool.importlinter.contracts]]
name = "Serving must not import pipelines directly"
type = "forbidden"
source_modules = [
  "src.serving"
]
forbidden_modules = [
  "src.pipelines",
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[dependency-groups]
dev = [
    "import-linter>=2.3",
    "psycopg>=3.2.9",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "mypy>=1.0.0",
]

