[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern-ml-pipeline"
version = "1.4.7"
description = "A modern, yaml-driven ML pipeline for multiple models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "wooshikwon", email = "wooshikwon@github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core dependencies - 로컬 CSV/SQLite로 학습 가능한 최소 세트
dependencies = [
    # CLI and Configuration
    "typer",
    "pydantic>=2.0.0",
    "pyyaml",
    "jinja2",
    "python-dotenv",
    # Data Processing
    "pandas",
    "scikit-learn",
    "xgboost>=1.7.0",
    "pyarrow",
    # SQL (SQLite는 드라이버 내장, 추가 설치 불필요)
    "sqlalchemy>=2.0.0",
    # ML Experiment Tracking
    "mlflow>=3,<4",
    "httpx>=0.28.1",
    # Hyperparameter Tuning
    "optuna>=3.0.0",
    # Calibration (scipy for beta calibration)
    "scipy>=1.10.0",
    # Core utilities
    "setuptools>=68",
    "packaging>=24.2",
    "rich>=14.0.0",
    # ML Feature Engineering
    "category-encoders>=2.8.1",
]

[project.optional-dependencies]
# Development and testing tools
dev = [
    # Testing framework
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3.1",
    "pytest-json-report>=1.5.0",
    "psutil>=5.9.0",  # For resource monitoring in tests
    "psycopg2-binary>=2.9.9",  # For legacy postgresql driver tests
    # Development tools
    "pre-commit>=3.0.0",
    "ruff>=0.12.0",
    "mypy>=1.8.0",
    "ipykernel>=6.0.0",
    "import-linter>=2.3.0",
]

# Extended ML libraries for advanced use cases (LightGBM, CatBoost)
ml-extras = [
    # Advanced ML Models
    "catboost>=1.2.0",
    "lightgbm>=4.1.0",
    # Performance optimization
    "numba>=0.58.1",
    "llvmlite>=0.41.1",
]

# PyTorch for deep learning models (FT-Transformer, LSTM 등)
torch-extras = [
    "torch>=2.0.0",
    "rtdl-revisiting-models>=0.0.2",
]

# 원격 데이터 인프라 (BigQuery, S3, GCS, PostgreSQL)
cloud = [
    # GCP
    "google-cloud-storage>=2.0.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "gcsfs>=2025.5.1",
    "db-dtypes>=1.0.0",
    "sqlalchemy-bigquery>=1.9.0",
    # AWS
    "boto3>=1.20.0",
    "s3fs>=2025.5.1",
    # Filesystem abstraction
    "fsspec>=2024.0.0",
    # PostgreSQL driver
    "psycopg[binary]>=3.2.9",
]

# API 서빙 (mmp serve-api)
serving = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

# Feature Store integration
feature-store = [
    "feast>=0.35.0",
    "redis>=6.2.0",
]

# 하위 호환: 기존 cloud-extras 사용자를 위한 별칭
cloud-extras = [
    "modern-ml-pipeline[cloud]",
]

# Complete installation with all extras
all = [
    "modern-ml-pipeline[ml-extras,torch-extras,cloud,serving,feature-store]",
]

[project.urls]
Homepage = "https://github.com/wooshikwon/modern-ml-pipeline"
Issues = "https://github.com/wooshikwon/modern-ml-pipeline/issues"
Repository = "https://github.com/wooshikwon/modern-ml-pipeline"

[project.scripts]
modern-ml-pipeline = "mmp.__main__:main"
ml-pipeline = "mmp.__main__:main"
mmp = "mmp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mmp"]

[tool.hatch.build]
exclude = [
  "/dev",
  "/mlruns", 
  "/logs",
  "/local",
  "/.claude",
  "*.log",
  "factoringlog.md",
  "main.py"
]

[tool.importlinter]
root_package = "mmp"

[[tool.importlinter.contracts]]
name = "Components must not import engine (upward dependency forbidden)"
type = "forbidden"
source_modules = [
  "mmp.components"
]
forbidden_modules = [
  "mmp.factory",
]

[[tool.importlinter.contracts]]
name = "Serving must not import pipelines directly"
type = "forbidden"
source_modules = [
  "mmp.serving"
]
forbidden_modules = [
  "mmp.pipelines",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top of file (Self-registration 패턴)
    "E501",  # Line too long (Black으로 관리)
    "E712",  # Avoid equality comparisons to True/False
    "E721",  # Use is/is not for type comparisons
    "E722",  # Do not use bare except (추후 개선)
    "F401",  # Imported but unused (side-effect imports, re-exports)
    "F841",  # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401", "F821"]  # Test fixtures and mocking patterns
"mmp/**/__init__.py" = ["F401"]  # Re-exports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

# pytest 설정은 pytest.ini에서 관리 (중복 설정 제거)

# Coverage configuration
[tool.coverage.run]
source = ["mmp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]
# Prevent parallel execution from creating multiple coverage files
parallel = true
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[dependency-groups]
dev = [
    "import-linter>=2.3",
    "pytest>=8.4.1",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.2.1",
    "psycopg2-binary>=2.9.9",
    "ruff>=0.12.3",
    "mypy>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "bandit>=1.8.6",
    "safety>=3.6.1",
    "psycopg2-binary>=2.9.9",
]
torch-extras = [
    "torch>=2.7.1",
]

