[project]
name = "my-project-config"
version = "0.1.0"
description = "ML Pipeline configuration project - generated with Modern ML Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "modern-ml-pipeline>=0.2.0",  # 개발 중이므로 주석 처리
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.8.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "modern-ml-pipeline",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# 빌드 시스템 제거 - 설정 전용 프로젝트이므로 패키지 빌드 불필요

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.uv.sources]
modern-ml-pipeline = { path = "../", editable = true }
